# aoc22

./: .gitignore  docker-compose.override.yml  docker-compose.yml  main.py  pyproject.toml  setup.cfg
.docker/python/: Dockerfile
aoc/: day_01.py  day_02.py  print_somthing.py
aoc/day_03/: main_a.py  main_b.py
aoc/day_04/: main_a.py  main_b.py
aoc/day_05/: main_a.py  main_b.py
aoc/day_06/: main_a.py  main_b.py
aoc/day_07/: main_a.py  main_b.py
aoc/day_08/: main_a.py  main_b.py
aoc/day_09/: main_a.py  main_b.py
aoc/day_10/: main_a.py  main_b.py
aoc/day_11/: main_a.py  main_b.py
aoc/day_12/: main_a.py  main_b.py
aoc/day_13/: main_a.py  main_b.py
aoc/day_14/: main_a.py  main_b.py
strta/: bootstrap  run  server  test
