[project]
name = "aoc"
version = "0.1.0"
description = ""
authors = [
    { name = "Rens Hamburger", email = "renshamburger@experiencedata.nl" },
]

readme = "readme.md"
packages = [{ include = "aoc" }]

dependencies = [
    "numpy>=1.22.3",
    "scipy>=1.9.3",
]
requires-python = ">=3.10"
[project.optional-dependencies]

[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.1.2",
    "flake8>=4.0.1"
]


[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
